--- a/conf/models/de.yaml
+++ b/conf/models/de.yaml
@@ -22,17 +22,17 @@ model:
     lr: .00003
     regularization: 0
     max_size: 0
-  preprocess:
-    state:
-      class: sklearn.preprocessing.StandardScaler
-      #Choose between standard scaler and min max scaler
-      #class: sklearn.preprocessing.MinMaxScaler
-        #params:
-          #feature_range: [-1.,1.]
-    action:
-      class: sklearn.preprocessing.StandardScaler
-    output:
-      class: sklearn.preprocessing.StandardScaler
+#  preprocess:
+#    state:
+#      class: sklearn.preprocessing.StandardScaler
+#      #Choose between standard scaler and min max scaler
+#      #class: sklearn.preprocessing.MinMaxScaler
+#        #params:
+#          #feature_range: [-1.,1.]
+#    action:
+#      class: sklearn.preprocessing.StandardScaler
+#    output:
+#      class: sklearn.preprocessing.StandardScaler
   plotting:
     label: One Step Deterministic Ensemble
     color: '#3660b5'
