--- a/conf/envs/crazyflie.yaml
+++ b/conf/envs/crazyflie.yaml
@@ -1,13 +1,13 @@
 env:
   name: Crazyflie-v0
   label: crazyflie
-  state_size: 6
+  state_size: 9
   action_size: 4
-  param_size: 4
+  param_size: 6 #include target
   target_size: 2
 
-data_dir: todo.dat # l500_t50_v5.dat #
-num_trials: 10
+data_dir: l1000_t250_v1_stable.dat # l500_t50_v5.dat #
+num_trials: 250
 trial_timesteps: 1000
 
 pid:
@@ -28,4 +28,22 @@ pid:
 
 model:
   training:
-    state_indices: [0,1,2,3]
+    t_range: 500
+    state_indices: [0,1,2,3,4,5,6,7,8] # ,9,10,11
+  preprocess:
+    state:
+      class: sklearn.preprocessing.StandardScaler
+    action:
+      class: sklearn.preprocessing.MinMaxScaler
+      params:
+        feature_range: [-1.,1.]
+    output:
+      class: sklearn.preprocessing.StandardScaler
+    index:
+      class: sklearn.preprocessing.MinMaxScaler
+      params:
+        feature_range: [-1.,1.]
+    param:
+      class: sklearn.preprocessing.MinMaxScaler
+      params:
+        feature_range: [-1.,1.]
