--- a/conf/envs/reacher.yaml
+++ b/conf/envs/reacher.yaml
@@ -6,10 +6,28 @@ env:
   param_size: 15
   target_size: 5
 
-data_dir: l1000_t100_n100.dat # l500_t50_v5.dat #
-num_trials: 100
+data_dir: l1000_t250_n100.dat # l500_t50_v5.dat #
+num_trials: 250
 trial_timesteps: 1000
 
 model:
   training:
+    t_range: 500
     state_indices: [0,1,2,3,4,5,6,7,8,9,13,14,15,16,17]
+  preprocess:
+    state:
+      class: sklearn.preprocessing.MinMaxScaler
+      params:
+        feature_range: [-1.,1.]
+    action:
+      class: sklearn.preprocessing.StandardScaler
+    output:
+      class: sklearn.preprocessing.StandardScaler
+    index:
+      class: sklearn.preprocessing.MinMaxScaler
+      params:
+        feature_range: [-1.,1.]
+    param:
+      class: sklearn.preprocessing.MinMaxScaler
+      params:
+        feature_range: [-1.,1.]
