--- a/conf/eval.yaml
+++ b/conf/eval.yaml
@@ -20,9 +20,22 @@ hydra:
 
 plotting:
   models:
+#  - d
+#  - de
   - p
-  - t
+#  - de
+#  - p
   - tp
+#  - t_1
+#  - te
+#  - pe
+#  - tp
+#  - tpe
+#  - d
+#  - de
+#  - t
+#  - te
+#  - tp
 #  - p
 #  - tp
 #  - de
@@ -38,13 +51,14 @@ plotting:
 #  - tp_0
 #  - tpe_0
   num_eval_train: 0
-  num_eval_test: 20
+  num_eval_test: 250
+  train_set: false
+  all: false
   compute_action: false
   legend: true
-  t_range: 1000
+  t_range: 2000
   mse_y_max: 2 #5
   copies: 0
-  all: true
   states: true
   mse: true
   sorted: false
