--- a/conf/models/d.yaml
+++ b/conf/models/d.yaml
@@ -16,23 +16,23 @@ model:
     num_traj: 50
   optimizer:
     epochs: 25
-    batch: 32
+    batch: 256
     name: Adam
     split: .8
-    lr: .0001
-    regularization: 0.003
+    lr: .00002 #.0001
+    regularization: 0 #0.003
     max_size: 0
-  preprocess:
-    state:
-      class: sklearn.preprocessing.StandardScaler
-      #Choose between standard scaler and min max scaler
-      #class: sklearn.preprocessing.MinMaxScaler
-        #params:
-          #feature_range: [-1.,1.]"""
-    action:
-      class: sklearn.preprocessing.StandardScaler
-    output:
-      class: sklearn.preprocessing.StandardScaler
+#  preprocess:
+#    state:
+#      class: sklearn.preprocessing.StandardScaler
+#      #Choose between standard scaler and min max scaler
+#      #class: sklearn.preprocessing.MinMaxScaler
+#        #params:
+#          #feature_range: [-1.,1.]"""
+#    action:
+#      class: sklearn.preprocessing.StandardScaler
+#    output:
+#      class: sklearn.preprocessing.StandardScaler
   plotting:
     label: One Step Deterministic
     color: '#0033ff'
