--- a/conf/models/p.yaml
+++ b/conf/models/p.yaml
@@ -17,25 +17,27 @@ model:
     num_traj: 50
   optimizer:
     epochs: 25
-    batch: 32
+    batch: 128
     name: Adam
     split: .8
-    lr: .00003
+    lr: .00001
     regularization: 0
     max_size: 0
-  preprocess:
-    state:
-      class: sklearn.preprocessing.MinMaxScaler
-      params:
-        feature_range: [-1.,1.]
-      #Choose between standard scaler and min max scaler
-      #class: sklearn.preprocessing.MinMaxScaler
-        #params:
-          #feature_range: [-1.,1.]
-    action:
-      class: sklearn.preprocessing.StandardScaler
-    output:
-      class: sklearn.preprocessing.StandardScaler
+#  preprocess:
+#    state:
+#      class: sklearn.preprocessing.StandardScaler # sklearn.preprocessing.MinMaxScaler
+#    #  params:
+#    #    feature_range: [-1.,1.]
+#      #Choose between standard scaler and min max scaler
+#      #class: sklearn.preprocessing.MinMaxScaler
+#        #params:
+#          #feature_range: [-1.,1.]
+#    action:
+#      class: sklearn.preprocessing.MinMaxScaler
+#      params:
+#        feature_range: [-1.,1.]
+#    output:
+#      class: sklearn.preprocessing.StandardScaler
   plotting:
     label: One Step Probabilistic
     color: '#00c414'
