--- a/conf/cartpole_lqr.yaml
+++ b/conf/cartpole_lqr.yaml
@@ -5,7 +5,7 @@ defaults:
 mode: collect # train or collect
 #model_dir: l400_t100_v4.dat
 exper_dir: false # set to a name to save models within a subfolder in the models directory
-plot: false
+plot: true
 video: false
 PID_test: false
 #determines whether target is part of input data
