--- a/conf/rewards.yaml
+++ b/conf/rewards.yaml
@@ -1,12 +1,11 @@
 defaults:
   - envs: reacher
 
-model_dir: l500_t50_v5.dat
 exper_dir: false # set to a name to load models from within a subfolder in the models directory
 plot: false
 
 traj_model: t
-step_model: p
+step_model: d
 split: .8
 
 hydra:
