--- a/conf/envs/cartpole.yaml
+++ b/conf/envs/cartpole.yaml
@@ -9,7 +9,7 @@ env:
 data_dir: l200_t100_v4.dat # v4 is normal l200 l400_t1250_v1.dat #
 num_trials: 100
 trial_timesteps: 200
-data_mode: stable
+data_mode: chaotic
 
 model:
   training:
