--- a/conf/eval.yaml
+++ b/conf/eval.yaml
@@ -4,7 +4,7 @@ defaults:
 #model_dir: l500_t50_v5.dat
 exper_dir: false # set to a name to load models from within a subfolder in the models directory
 plot: false
-data_mode_plot: unstable
+data_mode_plot: stable
 
 hydra:
   run:
@@ -21,15 +21,16 @@ hydra:
 
 plotting:
   models:
-  - d
+#  - d
 #  - de
 #  - p
 #  - de
 #  - p
-  - t
+  - pe
+#  - t
 #  - te
 #  - tp
-#  - tpe
+  - tpe
 #  - t_1
 #  - te
 #  - pe
@@ -57,7 +58,7 @@ plotting:
   num_eval_train: 0
   num_eval_test: 100
   train_set: false
-  plot_states: true
+  plot_states: false
   all: false
   compute_action: false
   legend: true
