--- a/environment.yml
+++ b/environment.yml
@@ -1,80 +1,101 @@
 name: continuouspred
 channels:
   - plotly
+  - conda-forge
+  - pytorch
   - akode
   - defaults
 dependencies:
   - asn1crypto=1.0.1=py36_0
   - atari-py=0.1.1=py36_0
   - blas=1.0=openblas
-  - ca-certificates=2020.1.1=0
-  - certifi=2019.11.28=py36_0
+  - botorch=0.1.4=0
+  - ca-certificates=2020.6.20=hecda079_0
+  - certifi=2020.6.20=py36h9f0ad1d_0
   - cffi=1.12.3=py36hb5b8e2f_0
   - chardet=3.0.4=py36_1003
+  - control=0.8.3=py36_1
   - cryptography=2.7=py36ha12b0ac_0
+  - cycler=0.10.0=py_2
+  - freetype=2.10.2=h8da9a1a_0
   - gym=0.10.5=py36_0
   - idna=2.8=py36_0
   - intel-openmp=2019.4=233
-  - joblib=0.14.1=py_0
+  - kiwisolver=1.1.0=py36h770b8ee_0
+  - libblas=3.8.0=11_openblas
+  - libcblas=3.8.0=11_openblas
   - libcxx=4.0.1=hcfea43d_1
   - libcxxabi=4.0.1=hcfea43d_1
   - libedit=3.1.20181209=hb402a30_0
   - libffi=3.2.1=h475c297_4
   - libgfortran=3.0.1=h93005f0_2
+  - liblapack=3.8.0=11_openblas
   - libopenblas=0.3.6=hdc02c5d_1
-  - llvm-openmp=4.0.1=hcfea43d_1
+  - libpng=1.6.37=hbbe82c9_1
+  - matplotlib-base=3.1.1=py36h3a684a6_1
   - mkl=2019.4=233
   - mkl-service=2.3.0=py36hfbe908c_0
   - ncurses=6.1=h0a44026_1
+  - ninja=1.9.0=py36h04f5b5a_0
   - nomkl=3.0=0
   - numpy=1.17.2=py36h48d439d_0
   - numpy-base=1.17.2=py36ha711998_0
-  - openssl=1.1.1d=h1de35cc_4
+  - openssl=1.1.1g=h0b31af3_0
   - pachi-py=0.0.21=py36_0
   - pip=19.2.3=py36_0
-  - plotly=4.5.0=py_0
+  - plotly-orca=1.2.1=1
+  - psutil=5.6.7=py36h1de35cc_0
   - pybox2d=2.3.2=py36_0
   - pycparser=2.19=py36_0
   - pyglet=1.4.0a1=py36_0
   - pyopenssl=19.0.0=py36_0
   - pysocks=1.7.1=py36_0
   - python=3.6.9=h359304d_0
+  - python_abi=3.6=1_cp36m
+  - pytorch=1.4.0=py3.6_0
   - readline=7.0=h1de35cc_5
   - requests=2.22.0=py36_0
-  - retrying=1.3.3=py36_2
-  - scikit-learn=0.22.1=py36hebd9d1a_0
   - scipy=1.3.1=py36h1a1e112_0
   - setuptools=41.4.0=py36_0
   - six=1.12.0=py36_0
   - sqlite=3.30.0=ha441bb4_0
   - tk=8.6.8=ha441bb4_0
+  - tornado=6.0.4=py36h37b9a7d_1
   - urllib3=1.24.2=py36_0
   - wheel=0.33.6=py36_0
   - xz=5.2.4=h1de35cc_4
   - zlib=1.2.11=h1de35cc_3
   - pip:
     - colorama==0.4.1
-    - cycler==0.10.0
     - cython==0.29.13
+    - decorator==4.4.2
     - dotmap==1.3.8
     - fasteners==0.15
     - future==0.18.0
     - glfw==1.8.3
-    - hydra-core==0.10.0
+    - gpy==1.9.9
+    - gpytorch==1.1.1
+    - hydra-core==0.11.3
     - imageio==2.6.1
-    - kiwisolver==1.1.0
-    - matplotlib==3.1.1
+    - joblib==0.14.1
+    - lockfile==0.12.2
     - monotonic==1.5
-    - mujoco-py==2.0.2.7
-    - omegaconf==1.3.0
+    - omegaconf==1.4.1
     - pandas==0.25.1
+    - paramz==0.9.5
     - pillow==6.2.0
+    - plotly==4.5.0
     - pyparsing==2.4.2
     - python-dateutil==2.8.0
     - pytz==2019.3
-    - pyyaml==5.1.2
+    - pyyaml==5.3
+    - retrying==1.3.3
+    - save==0.1
+    - scikit-learn==0.22.1
     - scipyplot==0.0.6
     - seaborn==0.9.0
-    - torch==1.3.0
-prefix: /Users/howardzhang/opt/anaconda3/envs/continuouspred
+    - sklearn==0.0
+    - slycot==0.3.5
+    - torch==1.5.0
+prefix: /Users/nato/miniconda3/envs/continuouspred
 
