minor pre-release updates

--- a/conf/crazyflie_pd.yaml
+++ b/conf/crazyflie_pd.yaml
@@ -4,7 +4,7 @@ defaults:
 
 mode: collect # train or collect
 exper_dir: false # set to a name to save models within a subfolder in the models directory
-plot: true
+plot: false
 video: false
 PID_test: false # true means identical trajectories
 #determines whether target is part of input data
