prep for lstm with omegaconf black magic

--- a/conf/envs/reacher.yaml
+++ b/conf/envs/reacher.yaml
@@ -6,7 +6,7 @@ env:
   param_size: 15
   target_size: 5
 
-data_dir: l1000_t250_n100.dat # l500_t50_v5.dat #
+data_dir: l1000_t100_n100.dat #l1000_t250_n100.dat # l500_t50_v5.dat #
 num_trials: 250
 trial_timesteps: 1000
 
