--- a/conf/envs/cartpole.yaml
+++ b/conf/envs/cartpole.yaml
@@ -6,7 +6,7 @@ env:
   param_size: 4
   target_size: 0
 
-data_dir: l200_t100_chaotic.dat #l200_t100_v4.dat # v4 is normal l200 l400_t1250_v1.dat #
+data_dir: l400_t100_v1.dat #l200_t100_chaotic.dat #l200_t100_v4.dat # v4 is normal l200 l400_t1250_v1.dat #
 num_trials: 100
 trial_timesteps: 200
 data_mode: chaotic
