--- a/conf/models/rnn.yaml
+++ b/conf/models/rnn.yaml
@@ -29,4 +29,4 @@ model:
     color: '#ffff00'
     color_plotly: rgb(255,255,0)
     marker: s
-    marker_plotly: cross-open-dot
+    marker_plotly: star-open-dot
