--- a/conf/eval.yaml
+++ b/conf/eval.yaml
@@ -21,19 +21,25 @@ hydra:
 
 plotting:
   models:
-  - d
-  - pe
+#  - d
+#  - pe
 #  - de
 #  - p
 #  - de
 #  - p
 #  - pe
- # - t
+  - t_1e
+  - t_3e
+  - t_5e
+  - t_8e
+  - t_12e
+  - t_16e
+#  - t
 #  - te
 #  - tp
 #  - tpe
 #  - lstm
-  - lstm_d
+#  - lstm_d
 #  - rnn
   num_eval_train: 0
   num_eval_test: 100
@@ -41,7 +47,7 @@ plotting:
   plot_states: false
   all: false
   compute_action: false
-  legend: false
+  legend: true
   t_range: 1000
   mse_y_max: 2 #5
   copies: 0
