--- a/conf/envs/crazyflie.yaml
+++ b/conf/envs/crazyflie.yaml
@@ -1,10 +1,10 @@
 env:
   name: Crazyflie-v0
   label: crazyflie
-  state_size: 9
-  action_size: 4
-  param_size: 6 #include target
-  target_size: 2
+  state_size: 3 # 9, 4, 6, 2 for sim
+  action_size: 4 # 3, 4, 0, 0 for hw
+  param_size: 0 #include target
+  target_size: 0
 
 data_dir: l1000_t250_v1_stable.dat #l5000_t100_v1.dat # l500_t50_v5.dat #
 num_trials: 100
@@ -28,8 +28,8 @@ pid:
 
 model:
   training:
-    t_range: 500
-    state_indices: [0,1,2,3,4,5,6,7,8] # ,9,10,11 [0,1,2] #
+    t_range: 500 # Change below for HW
+    state_indices: [0,1,2] #[0,1,2,3,4,5,6,7,8] # ,9,10,11 [0,1,2] #
     state_indices_lorenz: [0,1,2] #[3,4,5] # ,9,10,11
   preprocess:
     state:
