--- a/conf/eval.yaml
+++ b/conf/eval.yaml
@@ -21,34 +21,34 @@ hydra:
 
 plotting:
   models:
-#  - d
-#  - pe
+  - d
+  - pe
 #  - de
 #  - p
 #  - de
 #  - p
 #  - pe
-  - t_1e
-  - t_3e
-  - t_5e
-  - t_8e
-  - t_12e
-  - t_16e
-#  - t
+#  - t_1e
+#  - t_3e
+#  - t_5e
+#  - t_8e
+#  - t_12e
+#  - t_16e
+  - t
 #  - te
 #  - tp
 #  - tpe
 #  - lstm
-#  - lstm_d
+  - lstm_d
 #  - rnn
   num_eval_train: 0
-  num_eval_test: 100
+  num_eval_test: 10
   train_set: false
   plot_states: false
-  all: false
+  all: true
   compute_action: false
   legend: true
-  t_range: 1000
+  t_range: 500
   mse_y_max: 2 #5
   copies: 0
   states: true
