--- a/conf/eval.yaml
+++ b/conf/eval.yaml
@@ -21,8 +21,8 @@ hydra:
 
 plotting:
   models:
-  - d
-  - pe
+#  - d
+#  - pe
 #  - de
 #  - p
 #  - de
@@ -39,7 +39,7 @@ plotting:
 #  - tp
 #  - tpe
 #  - lstm
-  - lstm_d
+#  - lstm_d
 #  - rnn
   num_eval_train: 0
   num_eval_test: 10
@@ -54,3 +54,4 @@ plotting:
   states: true
   mse: true
   sorted: false
+  control_test: true
