Changed number of epochs for one step model

--- a/conf/models/d.yaml
+++ b/conf/models/d.yaml
@@ -16,7 +16,7 @@ model:
     filter_rate: 0.0
     num_traj: 50
   optimizer:
-    epochs: 25
+    epochs: 5  # Default 25
     batch: 32
     name: Adam
     split: .8
