--- a/conf/plan.yaml
+++ b/conf/plan.yaml
@@ -3,11 +3,15 @@ defaults:
   - envs: reacher
 
 video: false
+load_model: true
+step_model: d
+traj_model: t
 
 #number of training points to randomly sample each retrain
 #set to 0 to train on all data_points
 num_training_points: 0
-n_iter: 2
+n_iter: 1
+
 #initial number of trajectories to train on
 initial_num_trials: 5
 initial_num_trial_length: 250
@@ -20,7 +24,8 @@ num_random_configs: 1000
 # if set to 0, will run MPC once every time step with horizon equal to value set below
 # normally set to 0 or 1
 num_MPC_per_iter: 1
-horizon: 100
+horizon_step: 15
+horizon_traj: 250
 
 #only used for one-step
 #use PID parameters to plan rather than random actions
