--- a/conf/mbrl.yaml
+++ b/conf/mbrl.yaml
@@ -1,34 +1,32 @@
 defaults:
-  - models: t
-  - envs: reacher
+  - models: te
+  - envs: cartpole
 
 video: false
-load_model: true
-step_model: d
-traj_model: t
 
-#number of training points to randomly sample each retrain
-#set to 0 to train on all data_points
-num_training_points: 0
-n_iter: 1
+bo:
+  random: 15
+  optimized: 50
 
-#initial number of trajectories to train on
-initial_num_trials: 5
-initial_num_trial_length: 250
-plan_trial_timesteps: 250
-#MPC samples
-num_random_configs: 1000
+opt: cma #bo #-model
+#train_model: true
+plot_during: false
 
-# number of MPC runs per iteration
-# runs MPC with horizon=plan_trial_timesteps/num_MPC_per_iter
-# if set to 0, will run MPC once every time step with horizon equal to value set below
-# normally set to 0 or 1
-num_MPC_per_iter: 1
-horizon_step: 20
-horizon_traj: 200
-
-#only used for one-step
-#use PID parameters to plan rather than random actions
-PID_plan: true
+metric:
+  name: Reward
+  minimize: false
 
 random_seed: 0
+
+hydra:
+  run:
+    dir: ./exp/${env.name}/${now:%Y.%m.%d}/${now:%H%M%S}
+  sweep:
+    dir: ./exp/${env.name}/${now:%Y.%m.%d}/${now:%H%M%S}
+    subdir: ${hydra.job.override_dirname}/${hydra.job.num}
+  job:
+    config:
+      override_dirname:
+        kv_sep: '='
+        item_sep: ','
+        exclude_keys: [ 'random_seed' ]
