--- a/conf/envs/reacher.yaml
+++ b/conf/envs/reacher.yaml
@@ -14,13 +14,13 @@ model:
   training:
     #state_indices: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]
     t_range: 500
-#    state_indices: [0,1,2,3,4,5,6,7,8,9,13,14,15,16,17]
-    state_indices: [0,1,2,3,4,5,6,7,8,9,13,14,15,16,17,18,19,20]
+    #    state_indices: [0,1,2,3,4,5,6,7,8,9,13,14,15,16,17]
+    state_indices: [ 0,1,2,3,4,5,6,7,8,9,13,14,15,16,17,18,19,20 ]
   preprocess:
     state:
       class: sklearn.preprocessing.MinMaxScaler
       params:
-        feature_range: [-1.,1.]
+        feature_range: [ -1.,1. ]
     action:
       class: sklearn.preprocessing.StandardScaler
     output:
@@ -28,8 +28,88 @@ model:
     index:
       class: sklearn.preprocessing.MinMaxScaler
       params:
-        feature_range: [-1.,1.]
+        feature_range: [ -1.,1. ]
     param:
       class: sklearn.preprocessing.MinMaxScaler
       params:
-        feature_range: [-1.,1.]
+        feature_range: [ -1.,1. ]
+
+
+problem:
+  name: Reacher
+  space:
+    p1:
+      type: range
+      bounds: [ 0,5 ] #[-5,0]
+      value_type: float
+      log_scale: false
+    p2:
+      type: range
+      bounds: [ 0,5 ] #[-5,0]
+      value_type: float
+      log_scale: false
+    p3:
+      type: range
+      bounds: [ 0,5 ] #[-5,0]
+      value_type: float
+      log_scale: false
+    p4:
+      type: range
+      bounds: [ 0,5 ] #[-5,0]
+      value_type: float
+      log_scale: false
+    p5:
+      type: range
+      bounds: [ 0, 5 ] #[-5,0]
+      value_type: float
+      log_scale: false
+    d1:
+      type: range
+      bounds: [ 0,1 ] #[-5,0]
+      value_type: float
+      log_scale: false
+    d2:
+      type: range
+      bounds: [ 0,1 ] #[-5,0]
+      value_type: float
+      log_scale: false
+    d3:
+      type: range
+      bounds: [ 0,1 ] #[-5,0]
+      value_type: float
+      log_scale: false
+    d4:
+      type: range
+      bounds: [ 0,1 ] #[-5,0]
+      value_type: float
+      log_scale: false
+    d5:
+      type: range
+      bounds: [ 0, 1 ] #[-5,0]
+      value_type: float
+      log_scale: false
+    t1:
+      type: range
+      bounds: [ -1.5,1.5 ] #[-5,0]
+      value_type: float
+      log_scale: false
+    t2:
+      type: range
+      bounds: [ -1.5,1.5 ] #[-5,0]
+      value_type: float
+      log_scale: false
+    t3:
+      type: range
+      bounds: [ -1.5,1.5 ] #[-5,0]
+      value_type: float
+      log_scale: false
+    t4:
+      type: range
+      bounds: [ -1.5,1.5 ] #[-5,0]
+      value_type: float
+      log_scale: false
+    t5:
+      type: range
+      bounds: [ -1.5,1.5 ] #[-5,0]
+      value_type: float
+      log_scale: false
