--- a/conf/plan.yaml
+++ b/conf/plan.yaml
@@ -1,9 +1,8 @@
 defaults:
-  - models: t
-  - envs: reacher
+  - models: d
+  - envs: cartpole
 
-video: false
-load_model: true
+load_model: false
 step_model: d_opt
 traj_model: t_opt2
 
@@ -13,12 +12,13 @@ data_mode: chaotic
 #number of training points to randomly sample each retrain
 #set to 0 to train on all data_points
 num_training_points: 0
-n_iter: 1
+n_iter: 10
+retrain_model: false
 
 #initial number of trajectories to train on
-initial_num_trials: 5
+initial_num_trials: 100
 initial_num_trial_length: 250
-#plan_trial_timesteps: 250
+plan_trial_timesteps: 250
 #MPC samples
 num_random_configs: 1000
 
@@ -32,7 +32,7 @@ horizon_traj: 200
 
 #only used for one-step
 #use PID parameters to plan rather than random actions
-action_plan: false
+action_plan: true
 
 random_seed: 0
 
