--- a/conf/nn_plan.yaml
+++ b/conf/nn_plan.yaml
@@ -2,10 +2,20 @@ defaults:
   - models: t
   - envs: cartpole
 
-load_model: false
+load_model: true
+save_model: false
 retrain_model: false
 traj_model: t_opt2
 use_cmaes: true
+# whether or not the dynamics model is used when optimizing cmaes
+no_est: true
+
+save_video: true
+save_video_est: true
+dir_traj_est: est
+dir_traj_vid: t_opt_vid
+dir_traj_state: t_opt_state
+dir_traj_action: t_opt_action
 
 h_width: 5
 h_layers: 1
@@ -18,7 +28,7 @@ num_training_points: 0
 n_iter: 10
 
 #initial number of trajectories to train on
-initial_num_trials: 500
+initial_num_trials: 100
 initial_num_trial_length: 250
 plan_trial_timesteps: 250
 #MPC samples
