--- a/conf/eval.yaml
+++ b/conf/eval.yaml
@@ -22,7 +22,8 @@ hydra:
 plotting:
   models:
   - d
-  - pe
+#  - t
+#  - pe
 #  - de
 #  - p
 #  - de
@@ -34,22 +35,22 @@ plotting:
 #  - t_8e
 #  - t_12e
 #  - t_16e
-  - t
+#  - t
 #  - te
 #  - tp
 #  - tpe
 #  - lstm
-  - lstm_d
+#  - lstm_d
 #  - rnn
   num_eval_train: 0
   num_eval_test: 10
   train_set: false
   plot_states: false
-  all: true
+  all: false
   compute_action: false
-  legend: true
-  t_range: 500
-  mse_y_max: 2 #5
+  legend: false
+  t_range: 100
+#  mse_y_max: 2 #5
   copies: 0
   states: true
   mse: true
