--- a/conf/models/d.yaml
+++ b/conf/models/d.yaml
@@ -7,7 +7,7 @@ model:
   gp: false
   lstm: false
   training:
-    hid_width: 250
+    hid_width: 256
     hid_depth: 2
     E: 1
     # Note: these do nothing for non trajectory based models
@@ -16,11 +16,11 @@ model:
     filter_rate: 0.0
     num_traj: 50
   optimizer:
-    epochs: 25
+    epochs: 20 #25
     batch: 32
     name: Adam
     split: .8
-    lr: .00003 #.0001
+    lr: .0003 #.0001
     regularization: 0 #0.003
     max_size: 0
 #  preprocess:
