--- a/conf/envs/cartpole.yaml
+++ b/conf/envs/cartpole.yaml
@@ -6,11 +6,11 @@ env:
   param_size: 4
   target_size: 0
 
-data_dir: l100_t100_v1.dat #default_fast.dat #_fb.dat #l200_t100_chaotic.dat #l200_t100_v4.dat # v4 is normal l200 l400_t1250_v1.dat #
-num_trials: 200
-trial_timesteps: 100
-data_mode: rand
-K: [ -1.49977814,  -4.78848863, -37.30568393,  -7.96699431]
+data_dir: l400_t100_v1.dat #l33_t100_v1.dat #default_fast.dat #_fb.dat #l200_t100_chaotic.dat #l200_t100_v4.dat # v4 is normal l200 l400_t1250_v1.dat #
+num_trials: 500
+trial_timesteps: 33
+data_mode: set
+K: [ -0.04926718,  -0.16348671, -13.15347572,  -3.14645973]
 ignore_done: true
 
 model:
