--- a/conf/envs/cartpole_mod.yaml
+++ b/conf/envs/cartpole_mod.yaml
@@ -6,11 +6,12 @@ env:
   param_size: 4
   target_size: 0
 
-data_dir: compound_50.dat #_fb.dat #l200_t100_chaotic.dat #l200_t100_v4.dat # v4 is normal l200 l400_t1250_v1.dat #
-num_trials: 200
-trial_timesteps: 50
+# change set to rand for default divergence
+data_dir: l33_rand.dat #500_set_l100.dat #_fb.dat #l200_t100_chaotic.dat #l200_t100_v4.dat # v4 is normal l200 l400_t1250_v1.dat #
+num_trials: 500
+trial_timesteps: 33
 data_mode: set
-K: [ -0.17154875, -34.51376529, -98.55609899,  -7.6457172 ]
+K: [ -0.10939722,  -0.36581336, -25.50751584, -11.95452197]
 #K: [ -0.67341968,  -3.77266595, -29.3239967,   -4.10929736]
 ignore_done: true
 
